--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<html lang="en">
-  <head>
-
-    <title>My project documentation</title>
-  </head>
-  
+<!doctype html>
+<html>
+<head>
+<title>My project documentation</title>
+<meta name="description" content="Our first page">
+<meta name="keywords" content="html tutorial template">
+</head>
+<body>
+Content goes here.
+</body>
+</html>
